add socket gems page

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,15 @@ body {
   background-size: cover;
   background-color: #44acbc;
 }
+
+#gem-table {
+  width: 100%;
+}
+
+.gem-lore {
+  background-color: #070007;
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #19004a;
+}
