--- a/src/components/CopyWidget/copyWidget.scss
+++ b/src/components/CopyWidget/copyWidget.scss
@@ -1,18 +1,28 @@
-.copyButton {
+.copyContainer {
   display: inline-block;
   border: none;
-  padding: 5px 10px 6px 10px;
+  padding: 8px 12px;
   text-align: center;
   text-decoration: none;
-  font-size: calc(0.8rem + 0.7vw);
   z-index: 1;
   cursor: pointer;
   border-radius: 4px;
 
-  .divider {
-    border-left: 1px solid;
-    border-color: rgba(0, 0, 0, 0.3);
+  .copyButton {
+    display: flex;
+    flex-direction: row;
     height: 100%;
-    margin: 0 7px;
+    font-size: calc(0.7rem + 0.7vw);
+
+    .divider {
+      margin: 0 7px;
+      border-left: 1px solid;
+      border-color: rgba(0, 0, 0, 0.3);
+    }
+
+    svg {
+      display: inline;
+      width: calc(0.7rem + 0.7vw);
+    }
   }
 }
