--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -126,6 +126,7 @@
 
         .subtitle {
           font-weight: 500;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
           color: white;
           width: 100%;
           display: flex;
@@ -157,6 +158,8 @@
             background-color: #4c6db1;
           }
         }
+
+
 
         .lore {
           margin: 0 !important;
