--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -118,6 +118,8 @@
         align-content: center;
         width: 100%;
         height: auto;
+        padding-top: 5px;
+        padding-bottom: 5px;
 
         .title {
           font-weight: 700;
