Control filters with react select

--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -1,6 +1,36 @@
+.searchBox input {
+  width: 100%;
+  min-height: 38px !important;
+  border-radius: 4px !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: hsl(0, 0%, 20%) !important;
+  text-indent: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: white !important;
+  border-color: white !important;
+  border-width: 0 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
+.clearButton {
+  min-height: 38px !important;
+  border-radius: 4px !important;
+  color: hsl(0, 0%, 100%) !important;
+  text-indent: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: #ea2626 !important;
+  border-color: #ea2626 !important;
+  border-width: 0 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 .shuffleCards {
 
   width: 100%;
+  min-height: 0.8vh;
   flex-flow: column wrap;
   justify-content: space-evenly;
 
