--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-button, input[type="submit"], input[type="reset"] {
+button, input[type="submit"], input[type="reset"], input[type="text"] {
   background: none;
   color: inherit;
   border: none;
@@ -6,6 +6,10 @@ button, input[type="submit"], input[type="reset"] {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+
+input:focus, textarea:focus, select:focus{
+  outline: none;
 }
 
 .theme-primary {
@@ -48,8 +52,28 @@ button, input[type="submit"], input[type="reset"] {
   justify-content: center;
 }
 
+.align-left {
+  text-align: left;
+}
+
 .space-between {
   justify-content: space-between;
+}
+
+.margin-full-5 {
+  margin: 5px;
+}
+
+.margin-full-10 {
+  margin: 10px;
+}
+
+.padding-full-5 {
+  padding: 5px;
+}
+
+.padding-full-10 {
+  padding: 10px;
 }
 
 .flexCol {
@@ -60,6 +84,38 @@ button, input[type="submit"], input[type="reset"] {
 .flexRow {
   display: flex;
   flex-direction: row;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-grow-2 {
+  flex-grow: 2;
+}
+
+.flex-grow-4 {
+  flex-grow: 4;
+}
+
+.flex-grow-8 {
+  flex-grow: 8;
+}
+
+.width5 {
+  width: 5%;
+}
+
+.width10 {
+  width: 10%;
+}
+
+.width15 {
+  width: 15%;
+}
+
+.width20 {
+  width: 20%;
 }
 
 .width25 {
