Search debounce, clear button works

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,6 +56,11 @@ input:focus, textarea:focus, select:focus{
   text-align: left;
 }
 
+.align-center {
+  text-align: center;
+}
+
+
 .space-between {
   justify-content: space-between;
 }
