--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -1,4 +1,5 @@
 .searchBox input {
+  cursor: text;
   width: 100%;
   min-height: 38px !important;
   border-radius: 4px !important;
@@ -15,22 +16,27 @@
 }
 
 .clearButton {
-  min-height: 38px !important;
-  border-radius: 4px !important;
-  color: hsl(0, 0%, 100%) !important;
-  text-indent: 10px;
-  font-size: 16px;
+  cursor: pointer;
+  min-height: 38px;
+  border-radius: 4px;
+  color: white;
+  font-size: 28px;
   font-weight: 400;
-  background-color: #ea2626 !important;
-  border-color: #ea2626 !important;
-  border-width: 0 !important;
+  background-color: #cb3939;
+  border-color: #cb3939;
+  border-width: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+  &:hover {
+    background-color: #ee5151;
+    border-color: #ee5151;
+  }
 }
 
 .shuffleCards {
 
   width: 100%;
-  min-height: 0.8vh;
+  min-height: 90vh;
   flex-flow: column wrap;
   justify-content: space-evenly;
 
