--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -1,4 +1,5 @@
 .searchBox input {
+  outline: none !important;
   cursor: text;
   width: 100%;
   min-height: 38px !important;
@@ -10,9 +11,14 @@
   font-size: 16px;
   font-weight: 400;
   background-color: white !important;
-  border-color: white !important;
-  border-width: 0 !important;
+  border-color: #1f99ff !important;
+  border-width: 8px !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+  &:focus {
+    border-color: #0080ff;
+    box-shadow: 0 0 2px 2px #0080ff;
+  }
 }
 
 .clearButton {
