--- a/src/components/HeaderBar/headerBar.scss
+++ b/src/components/HeaderBar/headerBar.scss
@@ -23,7 +23,7 @@
   &:hover {
     transition: background-color 0.2s;
     transition-timing-function: ease-in-out;
-    background-color: #282828;
+    background-color: #2d2d2d;
   }
 }
 
