--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -150,7 +150,7 @@
     position: relative;
     margin: 10px;
     width: 300px;
-    background-color: #292929;
+    background-color: #1e1e1e;
 
     border-style: solid;
     border-width: 10px 0 0 0;
@@ -212,6 +212,7 @@
 
         .lore {
           margin: 0 !important;
+          color: white;
           font-weight: 800 !important;
           font-family: "ＭＳ Ｐゴシック", monospace !important;
         }
