Double up images to create actual tint

--- a/src/pages/Portrait/portrait.scss
+++ b/src/pages/Portrait/portrait.scss
@@ -22,6 +22,10 @@
         background-color: #060a1f;
         width: 60%;
 
+        .fade {
+          opacity: 0.25;
+        }
+
         .tintedIcon {
           position: absolute;
           right: 0;
