--- a/src/pages/Portrait/portrait.scss
+++ b/src/pages/Portrait/portrait.scss
@@ -39,7 +39,19 @@
           right: 0;
           left: 0;
           width: 100%;
+          height: 100%;
           object-fit: cover;
+
+          canvas {
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100% !important;
+            height: 100% !important;
+          }
         }
       }
 
