--- a/src/pages/Portrait/portrait.scss
+++ b/src/pages/Portrait/portrait.scss
@@ -1,5 +1,45 @@
 .Portrait {
 
+  .entryItem {
+    margin: 5px auto;
+    padding: 5px;
+    border-radius: 10px;
+    width: 75%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .move-prompt {
+      width: 24px;
+      font-size: 32px;
+      line-height: 28px;
+      color: white;
+    }
+
+    .selectContainer {
+      min-width: 200px;
+      text-align: left;
+      margin-left: 5px;
+    }
+
+    .delete {
+      background-color: #c73636;
+      border-radius: 20px;
+      margin-left: 5px;
+      width: 38px;
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 10px;
+      color: white;
+      justify-content: center;
+    }
+  }
+
+  .itemBkg {
+    background-color: #387dc7;
+  }
+
   .palsBox {
     width: 100%;
     height: calc(100vh - 58px);
@@ -28,8 +68,8 @@
       .image {
         position: relative;
         background-color: #060a1f;
-        height: 90%;
-        max-width: 90%;
+        height: 85%;
+        max-width: 85%;
         aspect-ratio: 1 / 1;
 
         .fade {
@@ -75,10 +115,6 @@
         flex-direction: column-reverse;
       }
 
-      .itemBkg {
-        background-color: #387dc7;
-      }
-
       .addBkg {
         border-color: #47dba4;
         color: #47dba4;
@@ -101,34 +137,6 @@
           width: 100%;
           height: 100%;
           margin: -2px 0px 0px;
-        }
-      }
-
-      .entryItem {
-        margin: 5px auto;
-        padding: 10px;
-        border-radius: 10px;
-        width: 75%;
-
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .selectContainer {
-          min-width: 200px;
-          text-align: left;
-          margin-left: 5px;
-        }
-
-        .delete {
-          background-color: #c73636;
-          border-radius: 20px;
-          width: 38px;
-          color: white;
-
-          display: flex;
-          align-items: center;
-          justify-content: center;
         }
       }
     }
