--- a/src/pages/Portrait/portrait.scss
+++ b/src/pages/Portrait/portrait.scss
@@ -1,7 +1,7 @@
 .Portrait {
 
   .entryItem {
-    margin: 5px auto;
+    margin: 10px auto 0 auto;
     padding: 5px;
     border-radius: 10px;
     width: 92%;
@@ -114,24 +114,18 @@
       min-width: 425px;
       border-radius: 10px;
       margin: 40px 40px 40px 0;
+      padding-top: 0;
       background-color: #294072;
 
       display: flex;
       flex-direction: column;
-
-      .scrollZone {
-        position: relative;
-
-        overflow: auto;
-        display: flex;
-        flex-direction: column-reverse;
-      }
 
       .addBkg {
         border-color: #47dba4;
         color: #47dba4;
         border-style: dashed;
         border-width: 1px;
+        margin-bottom: 10px;
 
         font-weight: 1000;
         font-size: 24px;
