Animating the entrance of layers

--- a/src/App.scss
+++ b/src/App.scss
@@ -197,6 +197,35 @@ input:focus, textarea:focus, select:focus{
   image-rendering: pixelated;
 }
 
+.animate {
+  animation-duration: 0.3s;
+  animation-name: animate-fade;
+  animation-delay: 0s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.animate.pop {
+  animation-name: animate-pop;
+  animation-timing-function: cubic-bezier(.26,.53,.74,1.28);
+}
+
+@keyframes animate-pop {
+  0% {
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
+
 .preserve-whitespace {
   white-space: pre;
 }
