--- a/src/pages/Portrait/portrait.scss
+++ b/src/pages/Portrait/portrait.scss
@@ -46,21 +46,23 @@
 
     .move-prompt {
       width: 32px;
+      min-width: 32px;
       font-size: 32px;
       line-height: 28px;
       color: white;
     }
 
     .selectContainer {
-      flex-grow: 20;
-      min-width: 200px;
+      flex-grow: 10;
+      min-width: 150px;
       text-align: left;
       margin-left: 8px;
       margin-right: 8px;
       display: flex;
 
       .categoryDropdown {
-        width: 79px;
+        width: 40px;
+        min-width: 40px;
       }
 
       .textureDropdown {
@@ -73,8 +75,9 @@
       background-color: #c73636;
       border-radius: 20px;
       margin-left: 5px;
-      margin-right: 8px;
+      margin-right: 4px;
       width: 38px;
+      min-width: 38px;
       font-size: 24px;
       font-weight: bold;
       line-height: 10px;
@@ -101,6 +104,7 @@
     font-size: 32px;
     bottom: 10px;
     left: 10px;
+    z-index: 100;
   }
 
   .imageZone {
