--- a/src/App.scss
+++ b/src/App.scss
@@ -176,6 +176,7 @@ input:focus, textarea:focus, select:focus{
 
 .App {
   text-align: center;
+  scroll-behavior: smooth !important;
 }
 
 .App-header {
