--- a/src/components/Buddy/buddy.scss
+++ b/src/components/Buddy/buddy.scss
@@ -28,8 +28,9 @@
 }
 
 .hitShake {
-  animation: shake 0.1s;
+  animation: shake 1s;
   animation-iteration-count: infinite;
+  filter: sepia(100%) saturate(400%) brightness(50%) hue-rotate(310deg);
 }
 
 @keyframes shake {
