Faster loading background image2

--- a/src/components/MainBanner/mainBanner.scss
+++ b/src/components/MainBanner/mainBanner.scss
@@ -20,6 +20,11 @@
     object-fit: cover; /* combined with 'absolute', works like background-size, but for DOM elements */
   }
 
+  .blur {
+    filter: blur(5px);
+    background-color: #3b5998;
+  }
+
   .desktopTitle {
     position: relative;
     display: flex;
