--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -18,7 +18,9 @@
   background-color: white !important;
   border-color: #1f99ff !important;
   border-width: 8px !important;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 
   &:focus {
     border-color: #0080ff;
@@ -36,7 +38,9 @@
   background-color: #cb3939;
   border-color: #cb3939;
   border-width: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 
   &:hover {
     background-color: #ee5151;
@@ -45,7 +49,6 @@
 }
 
 .shuffleCards {
-
   width: 100%;
   min-height: 90vh;
   flex-flow: column wrap;
@@ -165,8 +168,6 @@
         align-content: center;
         width: 100%;
         height: auto;
-        padding-top: 5px;
-        padding-bottom: 5px;
 
         .title {
           font-weight: 700;
@@ -175,7 +176,9 @@
 
         .subtitle {
           font-weight: 500;
-          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+            'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+            'Helvetica Neue', sans-serif !important;
           color: white;
           width: 100%;
           display: flex;
@@ -208,13 +211,11 @@
           }
         }
 
-
-
         .lore {
           margin: 0 !important;
           color: white;
           font-weight: 800 !important;
-          font-family: "ＭＳ Ｐゴシック", monospace !important;
+          font-family: 'ＭＳ Ｐゴシック', monospace !important;
         }
 
         img {
