--- a/src/animations.scss
+++ b/src/animations.scss
@@ -34,6 +34,46 @@ Animation System by Neale Van Fleet from Rogue Amoeba
   }
 }
 
+/* squishy */
+@keyframes squishy {
+  0% {
+    transform: scale(1, 1);
+  }
+  10% {
+    transform: scale(1.6, 0.8) translate(0, 0);
+  }
+  20% {
+    transform: scale(1.3, 0.8) translate(0, 0);
+  }
+  40% {
+    transform: scale(0.8, 1.3) translate(0, -10px);
+  }
+  50% {
+    transform: scale(0.8, 1.6) translate(0, -10px);
+  }
+  60% {
+    transform: scale(0.8, 1.3) translate(0, -10px);
+  }
+  80% {
+    transform: scale(1.2, 0.8) translate(0, 0);
+  }
+  90% {
+    transform: scale(1.2, 0.8) translate(0, 0);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+.squishAnimation:hover {
+  .squishImg {
+    animation-name: squishy;
+    transform-origin: bottom;
+    animation-timing-function: ease;
+  }
+}
+
+
 /* Blur In */
 .animate.blur {
   animation-name: animate-blur;
