--- a/src/components/CopyWidget/copyWidget.scss
+++ b/src/components/CopyWidget/copyWidget.scss
@@ -8,7 +8,7 @@
 
   box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.1) inset;
   border-radius: 1px;
-  border: 1px solid #182c0a;
+  border: 0px solid #335717;
   border-bottom-width: 2px;
 
   .copyButton {
