--- a/src/components/HeaderBar/headerBar.scss
+++ b/src/components/HeaderBar/headerBar.scss
@@ -57,7 +57,7 @@
     .facegemButton {
       box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.2) inset;
       border-radius: 1px;
-      border: 1px solid #210c3b;
+      border: 0px solid #4e1f86;
       border-bottom-width: 2px;
     }
     .facegemButton:hover {
