--- a/src/components/PlayersOnlineBanner/PlayersOnlineBanner.scss
+++ b/src/components/PlayersOnlineBanner/PlayersOnlineBanner.scss
@@ -3,9 +3,9 @@
   padding: 15px 0;
   text-align: center;
   color: whitesmoke;
-  background-color: #DE4040;
+  background-color: #de4040;
 
-  box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.3) inset;
+  box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.3) inset;
   border: 0px solid #641313;
   border-bottom-width: 2px;
 
