--- a/src/components/QuoteTicker/quoteTicker.scss
+++ b/src/components/QuoteTicker/quoteTicker.scss
@@ -1,5 +1,5 @@
 .quoteTicker {
-  background-color: #DE4040;
+  background-color: #de4040;
   height: 140px;
 
   .ticker {
@@ -32,6 +32,4 @@
       font-style: italic;
     }
   }
-
-
 }
