--- a/src/components/CopyWidget/copyWidget.scss
+++ b/src/components/CopyWidget/copyWidget.scss
@@ -6,7 +6,7 @@
   z-index: 1;
   cursor: pointer;
 
-  box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.1) inset;
+  box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.1) inset;
   border-radius: 1px;
   border: 0px solid #335717;
   border-bottom-width: 2px;
