--- a/src/components/HeaderBar/headerBar.scss
+++ b/src/components/HeaderBar/headerBar.scss
@@ -10,7 +10,7 @@
   color: whitesmoke;
   background-color: #212121;
 
-  box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.1) inset;
+  box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.1) inset;
   border-radius: 1px;
   border: 1px solid black;
   border-bottom-width: 2px;
@@ -55,13 +55,13 @@
     justify-content: space-between;
 
     .facegemButton {
-      box-shadow: 0px 0px 3px 1px rgba(255,255,255,0.2) inset;
+      box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.2) inset;
       border-radius: 1px;
       border: 0px solid #4e1f86;
       border-bottom-width: 2px;
     }
     .facegemButton:hover {
-      box-shadow: 0px 0px 4px 2px rgba(255,255,255,0.4) inset;
+      box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.4) inset;
 
       .gemImg {
         animation-name: squishy;
@@ -69,7 +69,6 @@
         animation-timing-function: ease;
       }
     }
-
   }
 
   .logo {
