--- a/src/components/Tooltip/tooltip.scss
+++ b/src/components/Tooltip/tooltip.scss
@@ -43,7 +43,7 @@
   border-top: 5px solid hsla(0, 0%, 23%, 0.95);
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
-  content: " ";
+  content: ' ';
   font-size: 0;
   line-height: 0;
   z-index: -5;
