--- a/src/pages/Map/map.scss
+++ b/src/pages/Map/map.scss
@@ -1,5 +1,4 @@
 .Map {
-
   .mapContainer {
     width: 100%;
     display: flex;
@@ -8,7 +7,9 @@
     overflow: hidden;
 
     .mapContent {
-      display: block; width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
     }
   }
@@ -60,7 +61,7 @@
     margin: 0px 4px 0 4px;
     border-radius: 5px;
     color: whitesmoke;
-    background-color: #DE4040;
+    background-color: #de4040;
 
     text-align: left;
     font-weight: 600;
@@ -72,7 +73,7 @@
   }
 
   .accordion__item {
-    margin-bottom: 10px
+    margin-bottom: 10px;
   }
 
   .accordion__panel {
