--- a/src/animations.scss
+++ b/src/animations.scss
@@ -75,7 +75,47 @@ Animation System by Neale Van Fleet from Rogue Amoeba
   .squishImg {
     animation-name: squishy;
     transform-origin: bottom;
-    animation-timing-function: ease;
+    animation-timing-function: ease-in-out;
+  }
+}
+
+/* wiggle */
+@keyframes wiggle {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(0.975);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1.025);
+  }
+  50% {
+    transform: scale(1.050);
+  }
+  60% {
+    transform: scale(1.04);
+  }
+  80% {
+    transform: scale(1.03);
+  }
+  90% {
+    transform: scale(1.02);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.wiggleAnimation:hover {
+  .wiggleImg {
+    animation-name: wiggle;
+    transform-origin: center;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
   }
 }
 
