--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
 .filterTitles {
   font-weight: 600;
   color: whitesmoke;
@@ -103,8 +105,12 @@
 .lore {
   margin: 0;
   color: white;
-  font-weight: 800;
-  font-family: 'ＭＳ Ｐゴシック', monospace;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 1.1em;
+  line-height: 0.9em;
+  letter-spacing: -1px;
+  //text-rendering: optimizeLegibility; // Enhances smoothing, less pixelated
+  font-weight: 200;
 }
 
 .enchantable {
